* Changed semantic_remote_form_for to allow for unobstrusive javascript / :remote option (rails3)
* Changed spec_helper to support Rails 2 with Rspec od Rails 3 with Rspec 3 environments
* Changed Rakefile to initalize the correct testing framework for the enviroment
* Fixed inputs_for_nested_attributes only appending to the output buffer
* Added railtie to perform initialization tasks after the rails git framework is available (rails3)
* Added helper to mark strings as HTML safe depending on environment, adapted from haml 2.2 solution (rails3)
* Added compatible install and form helpers (rails3)

0.9.9 [unreleased]

* Changed date/time inputs to default to nil instead of Time.now when the object has no value (due to deprecation warning, #240)
* Changed the behaviour of associations with a :class_name option to be more consistent with what Rails expects
* Fixed issues with Ruby 1.9.1 and Haml
* Add the :disabled option to check_boxes input

0.9.8

* Deprecated :selected/:checked options, see http://wiki.github.com/justinfrench/formtastic/deprecation-of-selected-option
* Changed CSS rules for fieldset lists to be more specific
* Changed that radio and checkbox inputs used to associate the legend label with the first choice's input (#101)
* Changed the generators to use |f| rather than |form| (#151)
* Changed the behaviour of :selected/:checked options to address several bugs and inconsistencies (#152)
* Changed CSS for input width property to max-width, allowing a size attribute to still be set
* Fixed an issue where label_str_method not honoured if the object is an ActiveRecord object
* Fixed incorrect html class for namespaced objects ("/" replaced with "_")
* Fixed compatibility issue with SearchLogic (#155)
* Fixed an issue where label_str_method was not being overridden with i18n
* Fixed a button text issue with Rails 2.x in which human_name on multi-word models returned one word (eg Ticketrequest) (#153)